--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
 
     <h1>My to do list</h1>
     
-    <p  style="background-color:SkyBlue">  <img src = "icons\unchecked_16.png"> Hit the gym <span>&#10006;</span> </p>
-    <p  style="background-color:lightgray">  <img src = "icons\checked_16.png">  <strike>Pay Bills</strike> <span>&#10006;</span> </p>
-    <p  style="background-color:SkyBlue">  <img src = "icons\unchecked_16.png"> Meet John <span>&#10006;</span> </p>
-    <p  style="background-color:lightblue">  <img src = "icons\unchecked_16.png"> Buy eggs<span>&#10006;</span> </p>
-    <p  style="background-color:lightgray">  <img src = "icons\checked_16.png"><strike>Read a book</strike> <span>&#10006;</span> </p>
-    <p  style="background-color:lightblue">  <img src = "icons\unchecked_16.png"> organize office <span>&#10006;</span> </p>
-    <p  style="background-color:SkyBlue">  <img src = "icons\unchecked_16.png"> Eat dinner <span>&#10006;</span> </p>
-    <p  style="background-color:lightblue">  <img src = "icons\unchecked_16.png"> Buy apples <span>&#10006;</span> </p>
-    <p  style="background-color:SkyBlue">  <img src = "icons\unchecked_16.png"> Meet George <span>&#10006;</span> </p>
-    <p  style="background-color:lightblue">  <img src = "icons\unchecked_16.png"> Feed the cat <span>&#10006;</span> </p>
-    <p  style="background-color:lightgray">  <img src = "icons\checked_16.png"><strike>Write a letter</strike>  <span>&#10006;</span> </p>
-    <p  style="background-color:lightblue">  <img src = "icons\unchecked_16.png"> Run 1 km <span>&#10006;</span> </p>
+    <p  style="background-color:SkyBlue">  <img src = "unchecked_16.png"> Hit the gym <span>&#10006;</span> </p>
+    <p  style="background-color:lightgray">  <img src = "checked_16.png">  <strike>Pay Bills</strike> <span>&#10006;</span> </p>
+    <p  style="background-color:SkyBlue">  <img src = "unchecked_16.png"> Meet John <span>&#10006;</span> </p>
+    <p  style="background-color:lightblue">  <img src = "unchecked_16.png"> Buy eggs<span>&#10006;</span> </p>
+    <p  style="background-color:lightgray">  <img src = "checked_16.png"><strike>Read a book</strike> <span>&#10006;</span> </p>
+    <p  style="background-color:lightblue">  <img src = "unchecked_16.png"> organize office <span>&#10006;</span> </p>
+    <p  style="background-color:SkyBlue">  <img src = "unchecked_16.png"> Eat dinner <span>&#10006;</span> </p>
+    <p  style="background-color:lightblue">  <img src = "unchecked_16.png"> Buy apples <span>&#10006;</span> </p>
+    <p  style="background-color:SkyBlue">  <img src = "unchecked_16.png"> Meet George <span>&#10006;</span> </p>
+    <p  style="background-color:lightblue">  <img src = "unchecked_16.png"> Feed the cat <span>&#10006;</span> </p>
+    <p  style="background-color:lightgray">  <img src = "checked_16.png"><strike>Write a letter</strike>  <span>&#10006;</span> </p>
+    <p  style="background-color:lightblue">  <img src = "unchecked_16.png"> Run 1 km <span>&#10006;</span> </p>
+
